# elevation-api

./: .gitignore  Dockerfile  LICENSE  README.md  debug.py  docker-compose.yaml  pyproject.toml
data/: config.json  lj_eu_dem_v11.tif  lj_eu_dem_v11.tif.aux.xml
elevation_api/: configuration.py  main.py  models.py
elevation_api/dependencies/: api_limiter.py  geometry.py  projection.py
elevation_api/models/: elevation_responses.py  geojson.py
elevation_api/routers/: elevation.py  geometry.py  metadata.py
elevation_api/services/: elevations.py  geotiff_utils.py  projections.py  utils.py
tests/: test_projection.py
