[tool.poetry]
name = "elevation-api"
version = "0.1.0"
description = ""
authors = ["Blaž Lipuš <lipusblaz@gmail.com>"]
readme = "README.md"
packages = [{include = "elevation_api"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
geojson = "^2.5.0"
fastapi-cprofile = "^0.0.2"
uvicorn = "^0.19.0"
websockets = "^10.4"
numpy = "^1.25.2"
gdal = "^3.7.1.1"

[tool.poetry.scripts]
start = "elevation_api.main:start"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
